hphp/hack/test/typecheck/tconst/type_constant_missing_class.php.exp
File "type_constant_missing_class.php", line 2, characters 15-19:
Unbound name: `Bogus` (Naming[2049])
File "type_constant_missing_class.php", line 4, characters 19-23:
Unbound name: `Bogus` (Naming[2049])
File "type_constant_missing_class.php", line 7, characters 19-23:
Unbound name: `Bogus` (Naming[2049])
File "type_constant_missing_class.php", line 16, characters 17-21:
Unbound name: `Bogus` (Naming[2049])
File "type_constant_missing_class.php", line 10, characters 31-32:
Unbound name `Bogus` in type constant access (Typing[4384])
File "type_constant_missing_class.php", line 7, characters 19-23:
Unbound name is here
File "type_constant_missing_class.php", line 11, characters 31-33:
Unbound name `Bogus` in type constant access (Typing[4384])
File "type_constant_missing_class.php", line 2, characters 15-19:
Unbound name is here
File "type_constant_missing_class.php", line 12, characters 31-32:
Unbound name `Bogus` in type constant access (Typing[4384])
File "type_constant_missing_class.php", line 7, characters 19-23:
Unbound name is here
File "type_constant_missing_class.php", line 13, characters 36-37:
Unbound name `Bogus` in type constant access (Typing[4384])
File "type_constant_missing_class.php", line 4, characters 19-23:
Unbound name is here
File "type_constant_missing_class.php", line 16, characters 17-21:
Unbound name `Bogus` in type constant access (Typing[4384])
File "type_constant_missing_class.php", line 17, characters 15-20:
Unbound name `Bogus` in type constant access (Typing[4384])
File "type_constant_missing_class.php", line 2, characters 15-19:
Unbound name is here
File "type_constant_missing_class.php", line 18, characters 18-19:
Unbound name `Bogus` in type constant access (Typing[4384])
File "type_constant_missing_class.php", line 7, characters 19-23:
Unbound name is here
File "type_constant_missing_class.php", line 19, characters 18-20:
Unbound name `Bogus` in type constant access (Typing[4384])
File "type_constant_missing_class.php", line 2, characters 15-19:
Unbound name is here
File "type_constant_missing_class.php", line 20, characters 18-19:
Unbound name `Bogus` in type constant access (Typing[4384])
File "type_constant_missing_class.php", line 7, characters 19-23:
Unbound name is here
File "type_constant_missing_class.php", line 21, characters 23-24:
Unbound name `Bogus` in type constant access (Typing[4384])
File "type_constant_missing_class.php", line 4, characters 19-23:
Unbound name is here
